--- a/package.json
+++ b/package.json
@@ -1,72 +1,78 @@
 {
-  "name": "image-id",
-  "version": "0.1.0",
-  "main": "app.js",
-  "author": "MTOCHIEV",
-  "description": "Image identifier",
-  "scripts": {
-    "ng": "ng",
-    "start": "electron-forge start",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "electron": "electron .",
-    "electron-build": "ng build && electron .",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^16.2.0",
-    "@angular/cdk": "^16.2.7",
-    "@angular/common": "^16.2.0",
-    "@angular/compiler": "^16.2.0",
-    "@angular/core": "^16.2.0",
-    "@angular/forms": "^16.2.0",
-    "@angular/material": "^16.2.7",
-    "@angular/platform-browser": "^16.2.0",
-    "@angular/platform-browser-dynamic": "^16.2.0",
-    "@angular/router": "^16.2.0",
-    "@google-cloud/vision": "^4.0.2",
-    "chart.js": "^4.4.0",
-    "electron-context-menu": "^3.6.1",
-    "electron-pdf-window": "^1.0.12",
-    "electron-squirrel-startup": "^1.0.0",
-    "fs": "^0.0.1-security",
-    "ng2-charts": "^5.0.3",
-    "ng2-pdf-viewer": "^10.0.0",
-    "ngx-extended-pdf-viewer": "^18.0.2",
-    "path": "^0.12.7",
-    "pdfjs-dist": "^3.11.174",
-    "primeicons": "^6.0.1",
-    "primeng": "^16.4.1",
-    "quill": "^1.3.7",
-    "rxjs": "~7.8.0",
-    "stream": "^0.0.2",
-    "tslib": "^2.3.0",
-    "uuid": "^9.0.1",
-    "zone.js": "~0.13.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.4",
-    "@angular/cli": "^16.2.4",
-    "@angular/compiler-cli": "^16.2.0",
-    "@electron-forge/cli": "^6.4.2",
-    "@electron-forge/maker-deb": "^6.4.2",
-    "@electron-forge/maker-rpm": "^6.4.2",
-    "@electron-forge/maker-squirrel": "^6.4.2",
-    "@electron-forge/maker-zip": "^6.4.2",
-    "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
-    "@types/jasmine": "~4.3.0",
-    "@types/uuid": "^9.0.5",
-    "debug-menu": "^0.6.1",
-    "electron": "^26.3.0",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
-  }
+	"name": "image-id",
+	"version": "0.1.0",
+	"main": "app.js",
+	"author": "MTOCHIEV",
+	"description": "Image identifier",
+	"scripts": {
+		"ng": "ng",
+		"start": "electron-forge start",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"test": "ng test",
+		"electron": "electron .",
+		"electron-build": "ng build && electron .",
+		"package": "electron-forge package",
+		"make": "electron-forge make"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "^16.2.0",
+		"@angular/cdk": "^16.2.7",
+		"@angular/common": "^16.2.0",
+		"@angular/compiler": "^16.2.0",
+		"@angular/core": "^16.2.0",
+		"@angular/forms": "^16.2.0",
+		"@angular/material": "^16.2.7",
+		"@angular/platform-browser": "^16.2.0",
+		"@angular/platform-browser-dynamic": "^16.2.0",
+		"@angular/router": "^16.2.0",
+		"@google-cloud/vision": "^4.0.2",
+		"chart.js": "^4.4.0",
+		"crypto-browserify": "^3.12.0",
+		"electron-context-menu": "^3.6.1",
+		"electron-pdf-window": "^1.0.12",
+		"electron-squirrel-startup": "^1.0.0",
+		"fs": "^0.0.1-security",
+		"ng2-charts": "^5.0.3",
+		"ng2-pdf-viewer": "^10.0.0",
+		"ngx-extended-pdf-viewer": "^18.0.2",
+		"node-polyfill-webpack-plugin": "^2.0.1",
+		"path": "^0.12.7",
+		"pdfjs-dist": "^3.11.174",
+		"primeicons": "^6.0.1",
+		"primeng": "^16.4.1",
+		"querystring-es3": "^0.2.1",
+		"quill": "^1.3.7",
+		"rxjs": "~7.8.0",
+		"stream": "^0.0.2",
+		"tslib": "^2.3.0",
+		"url": "^0.11.3",
+		"uuid": "^9.0.1",
+		"zone.js": "~0.13.0"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^16.2.4",
+		"@angular/cli": "^16.2.4",
+		"@angular/compiler-cli": "^16.2.0",
+		"@electron-forge/cli": "^6.4.2",
+		"@electron-forge/maker-deb": "^6.4.2",
+		"@electron-forge/maker-rpm": "^6.4.2",
+		"@electron-forge/maker-squirrel": "^6.4.2",
+		"@electron-forge/maker-zip": "^6.4.2",
+		"@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
+		"@types/jasmine": "~4.3.0",
+		"@types/node": "^20.8.7",
+		"@types/uuid": "^9.0.5",
+		"@types/webpack-env": "^1.18.3",
+		"debug-menu": "^0.6.1",
+		"electron": "^26.3.0",
+		"jasmine-core": "~4.6.0",
+		"karma": "~6.4.0",
+		"karma-chrome-launcher": "~3.2.0",
+		"karma-coverage": "~2.2.0",
+		"karma-jasmine": "~5.1.0",
+		"karma-jasmine-html-reporter": "~2.1.0",
+		"typescript": "~5.1.3"
+	}
 }
