--- a/angular.json
+++ b/angular.json
@@ -87,12 +87,7 @@
 						"tsConfig": "tsconfig.spec.json",
 						"inlineStyleLanguage": "less",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": [
-							"node_modules/primeng/resources/themes/lara-light-teal/theme.css",
-							"node_modules/primeng/resources/primeng.min.css",
-							"node_modules/primeicons/primeicons.css",
-							"src/styles.less"
-						],
+						"styles": ["node_modules/primeng/resources/primeng.min.css", "node_modules/primeicons/primeicons.css", "src/styles.less"],
 						"scripts": []
 					}
 				}
