--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
 		"@angular/platform-browser-dynamic": "^16.2.0",
 		"@angular/router": "^16.2.0",
 		"@google-cloud/vision": "^4.0.2",
+		"@types/lodash": "^4.14.200",
 		"chart.js": "^4.4.0",
 		"crypto-browserify": "^3.12.0",
 		"electron-context-menu": "^3.6.1",
 		"electron-pdf-window": "^1.0.12",
 		"electron-squirrel-startup": "^1.0.0",
 		"fs": "^0.0.1-security",
+		"lodash": "^4.17.21",
 		"ng2-charts": "^5.0.3",
 		"ng2-pdf-viewer": "^10.0.0",
 		"ngx-extended-pdf-viewer": "^18.0.2",
