--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"electron-context-menu": "^3.6.1",
 		"electron-pdf-window": "^1.0.12",
 		"electron-squirrel-startup": "^1.0.0",
+		"electron-store": "^8.1.0",
 		"fs": "^0.0.1-security",
 		"lodash": "^4.17.21",
 		"ng2-charts": "^5.0.3",
