--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "image-id",
-	"version": "0.1.0",
+	"version": "0.4.0",
 	"main": "app.js",
 	"author": "MTOCHIEV",
 	"description": "Image identifier",
@@ -35,11 +35,14 @@
 		"electron-pdf-window": "^1.0.12",
 		"electron-squirrel-startup": "^1.0.0",
 		"electron-store": "^8.1.0",
+		"file-saver": "^2.0.5",
 		"fs": "^0.0.1-security",
+		"json2xml": "^0.1.3",
 		"lodash": "^4.17.21",
 		"ng2-charts": "^5.0.3",
 		"ng2-pdf-viewer": "^10.0.0",
 		"ngx-extended-pdf-viewer": "^18.0.2",
+		"ngx-filesaver": "^16.0.0",
 		"node-polyfill-webpack-plugin": "^2.0.1",
 		"path": "^0.12.7",
 		"pdfjs-dist": "^3.11.174",
@@ -52,6 +55,7 @@
 		"tslib": "^2.3.0",
 		"url": "^0.11.3",
 		"uuid": "^9.0.1",
+		"xmlbuilder": "^15.1.1",
 		"zone.js": "~0.13.0"
 	},
 	"devDependencies": {
@@ -64,6 +68,7 @@
 		"@electron-forge/maker-squirrel": "^6.4.2",
 		"@electron-forge/maker-zip": "^6.4.2",
 		"@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
+		"@electron/rebuild": "^3.3.0",
 		"@types/jasmine": "~4.3.0",
 		"@types/node": "^20.8.7",
 		"@types/uuid": "^9.0.5",
